# Hackathon-II---evaluation-of-todo

./: .dockerignore  .env.production.template  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Hackathon II - Todo Spec-Driven Development.txt  PHASE6_10_IMPLEMENTATION_SUMMARY.md  README-DEPLOYMENT.md  README.md  TESTING_ALL_PHASES.md  deploy-to-hf.sh  pyproject.toml
.spec-kit/: config.yaml
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.test  config.py  database.py  delete_user.py  logging_config.py  main.py  pyproject.toml  test_db_connection.py
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_conversation_and_message_tables.py  c43a308a9987_add_tags_and_task_tags_tables.py
backend/mcp_server/: __init__.py  server.py  tools.py
backend/middleware/: __init__.py  auth.py  logging.py
backend/models/: __init__.py  conversation.py  message.py  tag.py  task.py  user.py
backend/routes/: __init__.py  auth.py  chat.py  conversations.py  tags.py  tasks.py
backend/schemas/: __init__.py  auth.py  chat.py  task.py
backend/services/: __init__.py  auth_service.py  chat_service.py  conversation_service.py  tag_service.py  task_service.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_chat.py  test_conversations.py  test_mcp_tools.py  test_tags.py  test_tasks.py
docs/: DEPLOYMENT.md  PHASE10_POLISH.md  PHASE6_HEALTH_CHECKS.md  PHASE7_KUBECTL_AI.md  PHASE8_KAGENT.md  PHASE9_REGISTRY.md
frontend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Dockerfile.test  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.js  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: index.ts  useApiCache.ts  useChat.ts  useOptimisticTasks.ts
frontend/lib/: api.ts  auth-client.ts  auth.ts  supabase-server.ts  supabase.ts  utils.ts
frontend/scripts/: setup-db.mjs
frontend/types/: chat.ts  index.ts
helm/: .helmignore  Chart.yaml  db-readiness.sh  values-prod.yaml  values-test.yaml  values.yaml
helm/templates/: _helpers.tpl  backend-deployment.yaml  backend-service.yaml  configmap-backend.yaml  configmap-frontend.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  rbac.yaml  secret-api-keys.yaml
specs/: overview.md
specs/001-phase1-todo-cli/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/002-phase2-fullstack-webapp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  main.py
tests/: __init__.py  conftest.py
(+124 files in other folders)
